cmake_minimum_required(VERSION 3.5)
project(realsense)
set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "-lm")
set(REALSENSE2_DIR "/usr/include/librealsense2")
find_package(PCL 1.8 REQUIRED)

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
find_package(realsense2 REQUIRED)
find_package(OpenCV REQUIRED)
add_executable(Res_get_mouse_event main.cpp)
target_link_libraries(Res_get_mouse_event ${PCL_LIBRARIES})
target_link_libraries(Res_get_mouse_event ${OpenCV_LIBS})
#if(realsense2_FOUND)
    include_directories(${realsense_INCLUDE_DIR})
    target_link_libraries(Res_get_mouse_event ${realsense2_LIBRARY})
#endif()
