cmake_minimum_required(VERSION 3.5)
project(realsence)
set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "-lm")
set(REALSENSE2_DIR "/usr/include/librealsense2")
find_package(realsense2 REQUIRED)
add_executable(Res_pose main.cpp)
#if(realsense2_FOUND)
    include_directories(${realsense_INCLUDE_DIR})
    target_link_libraries(Res_pose ${realsense2_LIBRARY})
#endif()
