cmake_minimum_required(VERSION 3.5)
project(realsence)
set(CMAKE_CXX_STANDARD 14)
set(REALSENSE2_DIR "/usr/include/librealsense2")
find_package(realsense2 REQUIRED)
find_package(OpenCV REQUIRED)
add_executable(realsense_test2 main.cpp realsense.cpp realsense.h)
target_link_libraries(realsense_test2 ${OpenCV_LIBS})
if(realsense2_FOUND)
    include_directories(${realsense_INCLUDE_DIR})
    target_link_libraries(realsense_test2 ${realsense2_LIBRARY})
endif()
